--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
             label 'AGENT-1'
         }
     }
-    //options {
-       // ansiColor('xterm')
+    options {
+       ansiColor('xterm')
         // timeout(time: 1, unit: 'HOURS')
         // disableConcurrentBuilds()
    // }
