--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -76,7 +76,7 @@ pipeline {
     // post build
     post { 
         always { 
-            echo 'I will always say Hello again!'
+            echo 'I will always say HareKrishna HareRama again!'
         }
         failure { 
             echo 'this runs when pipeline is failed, used generally to send some alerts'
