--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -6,8 +6,8 @@ pipeline {
     }
     options {
        ansiColor('xterm')
-        timeout(time: 1, unit: 'HOURS')
-        disableConcurrentBuilds()
+        // timeout(time: 1, unit: 'HOURS')
+        // disableConcurrentBuilds()
    }
     // parameters {
     //     choice(name: 'action', choices: ['apply', 'destroy'], description: 'Pick something')
